handle missing values for color and symbol

--- a/sandbox/plot.ipynb
+++ b/sandbox/plot.ipynb
@@ -12,6 +12,7 @@
     "import zarr\n",
     "from scipy.spatial.distance import squareform\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "plotly.io.renderers.default = \"plotly_mimetype+notebook_connected\""
    ]
@@ -139,7 +140,7 @@
     "        [\"A\", \"apple\", \"carrot\", \"pigeon\", \"Ferrari\"],\n",
     "        [\"B\", \"apple\", \"pea\", \"ladybird\", \"Lamborghini\"],\n",
     "        [\"C\", \"banana\", \"cabbage\", \"pigeon\", \"Landrover\"],\n",
-    "        [\"D\", \"mango\", \"cabbage\", \"spider\", \"Lamborghini\"],\n",
+    "        [\"D\", \"mango\", \"cabbage\", \"spider\", np.nan],\n",
     "    ],\n",
     "    columns=[\"name\", \"fruit\", \"vegetable\", \"animal\", \"car\"],\n",
     ")\n",
@@ -164,6 +165,16 @@
    "outputs": [],
    "source": [
     "anjl.paint_internal(Z1, ld1[\"fruit\"].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a2a712a-f025-474d-90a1-948322e3a694",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anjl.paint_internal(Z1, ld1[\"car\"].values)"
    ]
   },
   {
@@ -200,6 +211,26 @@
     "    color=\"fruit\",\n",
     "    marker_size=20,\n",
     "    symbol=\"car\",\n",
+    "    internal_marker_size=5,\n",
+    "    line_width=4,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d9d6a48-691f-4aff-8832-3814d8639ac0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anjl.plot(\n",
+    "    Z=Z1r,\n",
+    "    leaf_data=ld1,\n",
+    "    hover_name=\"name\",\n",
+    "    hover_data=[\"fruit\", \"vegetable\", \"animal\", \"car\"],\n",
+    "    color=\"car\",\n",
+    "    marker_size=20,\n",
+    "    symbol=\"fruit\",\n",
     "    internal_marker_size=5,\n",
     "    line_width=4,\n",
     ")"
