--- a/sandbox/plot.ipynb
+++ b/sandbox/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "864df6fb-3976-4e02-a9d6-bba8cfd709cd",
    "metadata": {},
    "outputs": [],
@@ -27,32 +27,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4f1bbc17-6d22-4f1b-a97a-9e6e8db96387",
+   "execution_count": 2,
+   "id": "ff9823e8-a955-41e2-8cbd-14c2cb2144de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  4.,  5., 10.],\n",
+       "       [ 4.,  0.,  7., 12.],\n",
+       "       [ 5.,  7.,  0.,  9.],\n",
+       "       [10., 12.,  9.,  0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "D1, _ = anjl.data.example_1()\n",
+    "D1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "089473fd-ff21-4811-93d7-15d2009d6635",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "init\n",
+      "parent 4 z 1 x 1 y 0\n",
+      "init done\n",
+      "z 1\n",
+      "J [18446744073709551615                    0                    0\n",
+      "                    2]\n",
+      "iteration 1 z 1\n",
+      "begin search\n",
+      "z 1\n",
+      "J [18446744073709551615                    0                    0\n",
+      "                    2]\n",
+      "First search the rows up to the new node z.\n",
+      "Second, fully search the row corresponding to the new node z.\n",
+      "Third, search all other rows after z.\n",
+      "search 2 0\n",
+      "best match obsolete, rescan row i= 2\n",
+      "search 3 2\n",
+      "best match still available 3 2\n",
+      "compare new node 3 1\n",
+      "iteration 2 z 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1. , 0. , 3. , 1. , 2. ],\n",
+       "       [2. , 4. , 2. , 2. , 3. ],\n",
+       "       [5. , 3. , 3.5, 3.5, 4. ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z1h = anjl.heuristic_nj(D1)\n",
+    "Z1h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8181afed-6929-44fc-b939-c9eb4caa172d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0. , 1. , 1. , 3. , 2. ],\n",
+       "       [2. , 4. , 2. , 2. , 3. ],\n",
+       "       [3. , 5. , 3.5, 3.5, 4. ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "Z1 = anjl.canonical_nj(D1)\n",
     "Z1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "73ac0689-182a-4e86-8a1a-3515631fe0ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node(id=6, dist=0, count=4)\n",
+      "    Leaf(id=3, dist=3.5)\n",
+      "    Node(id=5, dist=3.5, count=3)\n",
+      "        Leaf(id=2, dist=2.0)\n",
+      "        Node(id=4, dist=2.0, count=2)\n",
+      "            Leaf(id=0, dist=1.0)\n",
+      "            Leaf(id=1, dist=3.0)\n"
+     ]
+    }
+   ],
    "source": [
     "print(anjl.to_string(Z1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3a1d1471-825a-452a-918d-2ece876de63d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0. , 1. , 1. , 3. , 2. ],\n",
+       "       [2. , 4. , 2. , 2. , 3. ],\n",
+       "       [3. , 5. , 3.5, 3.5, 4. ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Z1r = anjl.rapid_nj(D1)\n",
     "Z1r"
@@ -60,13 +174,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2e00bf2b-4231-4574-8839-b37b43ea351b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node(id=6, dist=0, count=4)\n",
+      "    Leaf(id=3, dist=3.5)\n",
+      "    Node(id=5, dist=3.5, count=3)\n",
+      "        Leaf(id=2, dist=2.0)\n",
+      "        Node(id=4, dist=2.0, count=2)\n",
+      "            Leaf(id=0, dist=1.0)\n",
+      "            Leaf(id=1, dist=3.0)\n"
+     ]
+    }
+   ],
    "source": [
     "print(anjl.to_string(Z1r))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec0d0031-bd79-463d-af9b-1a2b4af76466",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -246,14 +382,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b63536cf-29d5-4780-ae6b-d014a8f91de5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0. , 1. , 2. , 3. , 2. ],\n",
+       "       [2. , 5. , 4. , 3. , 3. ],\n",
+       "       [3. , 6. , 2. , 2. , 4. ],\n",
+       "       [4. , 7. , 0.5, 0.5, 5. ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "D2, _ = anjl.data.wikipedia_example()\n",
     "Z2 = anjl.canonical_nj(D2)\n",
     "Z2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a6b5ad22-24f5-4ff3-8432-df0c03d0fa55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "init\n",
+      "parent 5 z 1 x 1 y 0\n",
+      "init done\n",
+      "z 1\n",
+      "J [18446744073709551615                    0                    0\n",
+      "                    2                    3]\n",
+      "iteration 1 z 1\n",
+      "begin search\n",
+      "z 1\n",
+      "J [18446744073709551615                    0                    0\n",
+      "                    2                    3]\n",
+      "First search the rows up to the new node z.\n",
+      "Second, fully search the row corresponding to the new node z.\n",
+      "Third, search all other rows after z.\n",
+      "search 2 0\n",
+      "best match obsolete, rescan row i= 2\n",
+      "search 3 2\n",
+      "best match still available 3 2\n",
+      "compare new node 3 1\n",
+      "search 4 3\n",
+      "best match still available 4 3\n",
+      "compare new node 4 1\n",
+      "iteration 2 z 2\n",
+      "begin search\n",
+      "z 2\n",
+      "J [18446744073709551615 18446744073709551615                    1\n",
+      "                    2                    3]\n",
+      "First search the rows up to the new node z.\n",
+      "Second, fully search the row corresponding to the new node z.\n",
+      "Third, search all other rows after z.\n",
+      "search 3 2\n",
+      "best match still available 3 2\n",
+      "compare new node 3 2\n",
+      "search 4 3\n",
+      "best match still available 4 3\n",
+      "compare new node 4 2\n",
+      "iteration 3 z 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1. , 0. , 3. , 2. , 2. ],\n",
+       "       [2. , 5. , 4. , 3. , 3. ],\n",
+       "       [3. , 6. , 2. , 2. , 4. ],\n",
+       "       [7. , 4. , 0.5, 0.5, 5. ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z2h = anjl.heuristic_nj(D2)\n",
+    "Z2h"
    ]
   },
   {
