--- a/sandbox/plot.ipynb
+++ b/sandbox/plot.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8181afed-6929-44fc-b939-c9eb4caa172d",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "       [3. , 5. , 3.5, 3.5, 4. ]], dtype=float32)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "73ac0689-182a-4e86-8a1a-3515631fe0ca",
    "metadata": {},
    "outputs": [
@@ -146,6 +146,30 @@
    ],
    "source": [
     "print(anjl.to_string(Z1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "254326b9-c7c9-4194-a5da-13e7a567695c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node(id=6, dist=0, count=4)\n",
+      "    Node(id=5, dist=3.5, count=3)\n",
+      "        Leaf(id=2, dist=2.0)\n",
+      "        Node(id=4, dist=2.0, count=2)\n",
+      "            Leaf(id=1, dist=3.0)\n",
+      "            Leaf(id=0, dist=1.0)\n",
+      "    Leaf(id=3, dist=3.5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(anjl.to_string(Z1h))"
    ]
   },
   {
