setup for optimisation

--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -46,6 +46,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "42ec4643-a6be-4b8d-8e4d-fb4d7c6140b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "165 ms ± 41.2 ms per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r10 -n1\n",
+    "anjl.heuristic_nj(small_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "915b0085-52d4-4126-ac48-59dfb7dc403e",
    "metadata": {},
@@ -54,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.29 ms ± 193 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.51 ms ± 517 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -73,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.76 ms ± 152 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.82 ms ± 218 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -116,6 +135,25 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "ebf1c642-1fa3-4047-a981-ddcd7afdf76c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.06 s ± 19.1 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r3 -n1\n",
+    "anjl.heuristic_nj(medium_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -123,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35.6 ms ± 1.47 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "36 ms ± 1.52 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -134,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
@@ -142,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.3 ms ± 1.15 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "23.9 ms ± 687 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
