--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "42ec4643-a6be-4b8d-8e4d-fb4d7c6140b9",
    "metadata": {},
    "outputs": [
@@ -54,18 +54,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "165 ms ± 41.2 ms per loop (mean ± std. dev. of 10 runs, 1 loop each)\n"
+      "1.01 ms ± 341 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit -r10 -n1\n",
+    "%%timeit -r1000 -n1\n",
     "anjl.heuristic_nj(small_D)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "915b0085-52d4-4126-ac48-59dfb7dc403e",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.51 ms ± 517 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.48 ms ± 302 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.82 ms ± 218 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.96 ms ± 214 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ebf1c642-1fa3-4047-a981-ddcd7afdf76c",
    "metadata": {},
    "outputs": [
@@ -142,18 +142,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.06 s ± 19.1 ms per loop (mean ± std. dev. of 3 runs, 1 loop each)\n"
+      "3.92 ms ± 290 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit -r3 -n1\n",
+    "%%timeit -r1000 -n1\n",
     "anjl.heuristic_nj(medium_D)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36 ms ± 1.52 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "33.9 ms ± 1.47 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.9 ms ± 687 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "23.9 ms ± 984 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.86 s ± 18.9 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "182 ms ± 9.82 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r20 -n1\n",
+    "anjl.heuristic_nj(large_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "edbc408e-f210-4bd4-8762-e249c66c1dd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.91 s ± 25.1 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -241,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
    "metadata": {},
    "outputs": [
@@ -249,7 +268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.28 s ± 38.8 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "6.39 s ± 43.4 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -268,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -278,7 +297,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,14 +310,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49d154101a1d42d790f786700a61a9ae",
+       "model_id": "449f9c1bf5a94444b66186906be1a606",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5866 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 853 ms, sys: 15 ms, total: 868 ms\n",
+      "Wall time: 868 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.heuristic_nj(xl_D, progress=tqdm);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d03fdca2-2c6e-4389-ad3c-0bb84eb6ce16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4ecb1db688424aa59c74b9f176b67c91",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,8 +366,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.4 s, sys: 210 ms, total: 19.6 s\n",
-      "Wall time: 19.5 s\n"
+      "CPU times: user 19.8 s, sys: 245 ms, total: 20 s\n",
+      "Wall time: 19.9 s\n"
      ]
     }
    ],
@@ -367,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -377,7 +430,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,14 +443,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc5e67207a7548b9a5b9b4e9438922c7",
+       "model_id": "6318bfb6751542b8ae2ec71eb8b176ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8823 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.13 s, sys: 42 ms, total: 2.17 s\n",
+      "Wall time: 2.16 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.heuristic_nj(xxl_D, progress=tqdm);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "94f6d2f5-e61e-45c8-934f-66289798bce9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6b511b2b24874912877dbe41a315eaa8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -412,8 +499,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 3s, sys: 478 ms, total: 1min 3s\n",
-      "Wall time: 1min 3s\n"
+      "CPU times: user 1min 6s, sys: 552 ms, total: 1min 6s\n",
+      "Wall time: 1min 6s\n"
      ]
     }
    ],
