--- a/sandbox/plot.ipynb
+++ b/sandbox/plot.ipynb
@@ -643,20 +643,148 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b13e8f8-52d0-4000-a42b-bc2f25958f7a",
+   "cell_type": "markdown",
+   "id": "87e1e3df-413b-4a58-a5d5-9af6d71029bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Example 5 (large)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75583a88-7a39-4f26-a1bf-b689787de2f8",
+   "id": "af260f75-296f-4f4e-a764-4995aa643f47",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ld5 = pd.read_csv(\"../benchmark/large/samples.csv\")\n",
+    "large = zarr.load(\"../benchmark/large/dist.zarr.zip\")\n",
+    "D5 = squareform(large)\n",
+    "D5.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57d16d56-df92-4125-b540-60c958bd9c27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z5r = anjl.rapid_nj(D5)\n",
+    "Z5h = anjl.heuristic_nj(D5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04909da7-011d-40c7-9a1c-b0c0396574fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anjl.plot(\n",
+    "    Z5r,\n",
+    "    line_width=0.5,\n",
+    "    marker_size=5,\n",
+    "    width=800,\n",
+    "    height=700,\n",
+    "    leaf_data=ld5,\n",
+    "    color=\"country\",\n",
+    "    hover_name=\"sample_id\",\n",
+    "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af1c70b5-aa0f-40eb-a99b-72b44e71e4ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anjl.plot(\n",
+    "    Z5h,\n",
+    "    line_width=0.5,\n",
+    "    marker_size=5,\n",
+    "    width=800,\n",
+    "    height=700,\n",
+    "    leaf_data=ld5,\n",
+    "    color=\"country\",\n",
+    "    hover_name=\"sample_id\",\n",
+    "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03ee9510-b7cd-4ec6-b015-f46dc0480351",
+   "metadata": {},
+   "source": [
+    "## Example 6 (XL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8195374f-2a79-44be-ae5c-739fd3d62878",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ld6 = pd.read_csv(\"../benchmark/xl/samples.csv\")\n",
+    "large = zarr.load(\"../benchmark/xl/dist.zarr.zip\")\n",
+    "D6 = squareform(large)\n",
+    "D6.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43b817ac-bcb3-4086-951d-25f584646d8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z6r = anjl.rapid_nj(D6)\n",
+    "Z6h = anjl.heuristic_nj(D6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eff370a1-0409-4390-ba14-3fc505c4de41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anjl.plot(\n",
+    "    Z6r,\n",
+    "    line_width=0.5,\n",
+    "    marker_size=5,\n",
+    "    width=800,\n",
+    "    height=700,\n",
+    "    leaf_data=ld6,\n",
+    "    color=\"taxon\",\n",
+    "    hover_name=\"sample_id\",\n",
+    "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d79582f5-acd8-455f-b7ee-8cdc6d637ce0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anjl.plot(\n",
+    "    Z6h,\n",
+    "    line_width=0.5,\n",
+    "    marker_size=5,\n",
+    "    width=800,\n",
+    "    height=700,\n",
+    "    leaf_data=ld6,\n",
+    "    color=\"taxon\",\n",
+    "    hover_name=\"sample_id\",\n",
+    "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
