--- a/sandbox/plot.ipynb
+++ b/sandbox/plot.ipynb
@@ -479,6 +479,7 @@
     "    color=\"taxon\",\n",
     "    hover_name=\"sample_id\",\n",
     "    leaf_data=ld3,\n",
+    "    render_mode=\"svg\",\n",
     ")"
    ]
   },
@@ -497,6 +498,7 @@
     "    color=\"taxon\",\n",
     "    hover_name=\"sample_id\",\n",
     "    leaf_data=ld3,\n",
+    "    render_mode=\"svg\",\n",
     ")"
    ]
   },
@@ -515,6 +517,7 @@
     "    color=\"taxon\",\n",
     "    hover_name=\"sample_id\",\n",
     "    leaf_data=ld3,\n",
+    "    render_mode=\"svg\",\n",
     ")"
    ]
   },
@@ -552,34 +555,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c059f48-6024-470b-9a28-9b22c5e881fe",
+   "id": "b69c7852-5922-4654-b610-1b97c2aeb5ba",
    "metadata": {},
    "outputs": [],
    "source": [
     "Z4 = anjl.canonical_nj(D4)\n",
-    "Z4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d392d01-6c41-4d20-ad2d-43b4b8b44e33",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "Z4h = anjl.heuristic_nj(D4)\n",
-    "Z4h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d14e789-4872-47ae-a0e9-412566849c0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Z4r = anjl.rapid_nj(D4)\n",
-    "Z4r"
+    "Z4r = anjl.rapid_nj(D4)"
    ]
   },
   {
@@ -589,7 +571,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(\n",
+    "fig = anjl.plot(\n",
     "    Z4,\n",
     "    line_width=0.5,\n",
     "    marker_size=5,\n",
@@ -599,7 +581,9 @@
     "    color=\"taxon\",\n",
     "    hover_name=\"sample_id\",\n",
     "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
-    ")"
+    ")\n",
+    "fig.update_layout(title=\"Canonical\")\n",
+    "fig"
    ]
   },
   {
@@ -609,7 +593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(\n",
+    "fig = anjl.plot(\n",
     "    Z4h,\n",
     "    line_width=0.5,\n",
     "    marker_size=5,\n",
@@ -619,7 +603,9 @@
     "    color=\"taxon\",\n",
     "    hover_name=\"sample_id\",\n",
     "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
-    ")"
+    ")\n",
+    "fig.update_layout(title=\"Heuristic\")\n",
+    "fig"
    ]
   },
   {
@@ -629,7 +615,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(\n",
+    "fig = anjl.plot(\n",
     "    Z4r,\n",
     "    line_width=0.5,\n",
     "    marker_size=5,\n",
@@ -639,7 +625,9 @@
     "    color=\"taxon\",\n",
     "    hover_name=\"sample_id\",\n",
     "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
-    ")"
+    ")\n",
+    "fig.update_layout(title=\"Rapid\")\n",
+    "fig"
    ]
   },
   {
@@ -681,7 +669,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(\n",
+    "fig = anjl.plot(\n",
     "    Z5r,\n",
     "    line_width=0.5,\n",
     "    marker_size=5,\n",
@@ -691,7 +679,11 @@
     "    color=\"country\",\n",
     "    hover_name=\"sample_id\",\n",
     "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
-    ")"
+    "    render_mode=\"svg\",\n",
+    "    count_sort=True,\n",
+    ")\n",
+    "fig.update_layout(title=\"Rapid\")\n",
+    "fig"
    ]
   },
   {
@@ -701,7 +693,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(\n",
+    "fig = anjl.plot(\n",
     "    Z5h,\n",
     "    line_width=0.5,\n",
     "    marker_size=5,\n",
@@ -711,7 +703,11 @@
     "    color=\"country\",\n",
     "    hover_name=\"sample_id\",\n",
     "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
-    ")"
+    "    render_mode=\"svg\",\n",
+    "    count_sort=True,\n",
+    ")\n",
+    "fig.update_layout(title=\"Heuristic\")\n",
+    "fig"
    ]
   },
   {
@@ -753,7 +749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(\n",
+    "fig = anjl.plot(\n",
     "    Z6r,\n",
     "    line_width=0.5,\n",
     "    marker_size=5,\n",
@@ -763,7 +759,9 @@
     "    color=\"taxon\",\n",
     "    hover_name=\"sample_id\",\n",
     "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
-    ")"
+    ")\n",
+    "fig.update_layout(title=\"Rapid\")\n",
+    "fig"
    ]
   },
   {
@@ -773,7 +771,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(\n",
+    "fig = anjl.plot(\n",
     "    Z6h,\n",
     "    line_width=0.5,\n",
     "    marker_size=5,\n",
@@ -783,7 +781,9 @@
     "    color=\"taxon\",\n",
     "    hover_name=\"sample_id\",\n",
     "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
-    ")"
+    ")\n",
+    "fig.update_layout(title=\"Heuristic\")\n",
+    "fig"
    ]
   }
  ],
