dynamic working and optimised

--- a/sandbox/plot.ipynb
+++ b/sandbox/plot.ipynb
@@ -51,39 +51,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Z1d = anjl.dynamic_nj(D1)\n",
+    "Z1d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fb814e1-cfb6-4311-b1cb-9195eb0908ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Z1h = anjl.heuristic_nj(D1)\n",
     "Z1h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b08079b-961d-475a-95ae-101ba17d3a13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(anjl.to_string(Z1h))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8181afed-6929-44fc-b939-c9eb4caa172d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Z1 = anjl.canonical_nj(D1)\n",
-    "Z1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73ac0689-182a-4e86-8a1a-3515631fe0ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(anjl.to_string(Z1))"
    ]
   },
   {
@@ -100,59 +80,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e00bf2b-4231-4574-8839-b37b43ea351b",
+   "id": "8181afed-6929-44fc-b939-c9eb4caa172d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(anjl.to_string(Z1r))"
+    "Z1 = anjl.canonical_nj(D1)\n",
+    "Z1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec0d0031-bd79-463d-af9b-1a2b4af76466",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "668c7ecb-26cd-4ec4-80ca-e4b2fade6196",
+   "id": "498e1f06-d95c-4475-ba2d-08b1e606d856",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_internal_nodes, df_leaf_nodes, df_edges = anjl.layout_equal_angle(Z=Z1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d125ca06-f49c-4ed3-976b-0743e79f9038",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_leaf_nodes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6bf7df0-c063-4608-9efc-2cb74faec438",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_internal_nodes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5701bf9-03d8-44f4-8b18-74c6dc815717",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_edges"
+    "print(anjl.to_string(Z1d))\n",
+    "print(anjl.to_string(Z1h))\n",
+    "print(anjl.to_string(Z1r))\n",
+    "print(anjl.to_string(Z1))"
    ]
   },
   {
@@ -162,17 +108,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(Z1h, marker_size=5, internal_marker_size=5, width=400, height=400)"
+    "anjl.plot(Z1d, marker_size=5, internal_marker_size=5, width=400, height=400)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c2f339f-38f7-4808-8de3-c8b25fa2df9c",
+   "id": "0e2cfa00-b1cd-4d64-8a53-8b8cbe6672c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(Z1, marker_size=5, internal_marker_size=5, width=400, height=400)"
+    "anjl.plot(Z1h, marker_size=5, internal_marker_size=5, width=400, height=400)"
    ]
   },
   {
@@ -183,6 +129,16 @@
    "outputs": [],
    "source": [
     "anjl.plot(Z1r, marker_size=5, internal_marker_size=5, width=400, height=400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c2f339f-38f7-4808-8de3-c8b25fa2df9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anjl.plot(Z1, marker_size=5, internal_marker_size=5, width=400, height=400)"
    ]
   },
   {
@@ -202,36 +158,6 @@
     "    columns=[\"name\", \"fruit\", \"vegetable\", \"animal\", \"car\"],\n",
     ")\n",
     "ld1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2c6db09-252d-4d97-9438-c0029c1d53e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.map_internal_to_leaves(Z1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb618075-c3c0-4246-a923-65ae532124ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.paint_internal(Z1, ld1[\"fruit\"].values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a2a712a-f025-474d-90a1-948322e3a694",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.paint_internal(Z1, ld1[\"car\"].values)"
    ]
   },
   {
@@ -304,13 +230,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b63536cf-29d5-4780-ae6b-d014a8f91de5",
+   "id": "65cdf669-4a98-4208-8447-de76c90cef0f",
    "metadata": {},
    "outputs": [],
    "source": [
     "D2, _ = anjl.data.wikipedia_example()\n",
-    "Z2 = anjl.canonical_nj(D2)\n",
-    "Z2"
+    "D2"
    ]
   },
   {
@@ -320,28 +245,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Z2d = anjl.dynamic_nj(D2)\n",
+    "Z2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e316e7d0-010f-49f5-9dbf-0592f89e1cc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Z2h = anjl.heuristic_nj(D2)\n",
     "Z2h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52b5b6fc-aa55-43f4-ac46-f031b34c58db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(anjl.to_string(Z2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0113c82e-b2d4-4b46-9bfe-23f95f791b6a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(anjl.to_string(Z2h))"
    ]
   },
   {
@@ -358,47 +274,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fcec992-d137-490d-b910-c613f5ae5c90",
+   "id": "062ead50-f768-40f6-9234-9264297c265d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(anjl.to_string(Z2r))"
+    "Z2 = anjl.canonical_nj(D2)\n",
+    "Z2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84f2946c-68e0-4c96-94ea-f80095766375",
+   "id": "589b3446-080b-4991-9358-48aadd29263f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.map_internal_to_leaves(Z2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "954dc15f-7107-461b-b40d-0162564c0e86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.map_internal_to_leaves(Z2r)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0c014da-5e74-45a5-976e-59f189f2310e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.plot(Z=Z2, line_width=2, marker_size=20, internal_marker_size=5)"
+    "print(anjl.to_string(Z2d))\n",
+    "print(anjl.to_string(Z2h))\n",
+    "print(anjl.to_string(Z2r))\n",
+    "print(anjl.to_string(Z2))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c9a271cf-c285-4d31-8c4b-4871d68d0df1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anjl.plot(Z=Z2d, line_width=2, marker_size=20, internal_marker_size=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d85c716-8003-4b99-a590-c76fb1387660",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,6 +323,16 @@
    "outputs": [],
    "source": [
     "anjl.plot(Z=Z2r, line_width=2, marker_size=20, internal_marker_size=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0c014da-5e74-45a5-976e-59f189f2310e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anjl.plot(Z=Z2, line_width=2, marker_size=20, internal_marker_size=5)"
    ]
   },
   {
@@ -437,50 +357,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "359b6cf3-7833-460a-b5e8-ddd96f3103a2",
+   "id": "82b55dc5-38ed-49e3-bebe-ef2d3748f365",
    "metadata": {},
    "outputs": [],
    "source": [
+    "Z3d = anjl.dynamic_nj(D3)\n",
+    "Z3h = anjl.heuristic_nj(D3)\n",
+    "Z3r = anjl.rapid_nj(D3)\n",
     "Z3 = anjl.canonical_nj(D3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9dbbd287-5587-4de7-8d21-d1512f9f0fb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Z3h = anjl.heuristic_nj(D3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2289b84c-302d-445e-b392-44ccc90826f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Z3r = anjl.rapid_nj(D3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f1879b7-50b4-4e43-a169-762c62f8055a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anjl.plot(\n",
-    "    Z3,\n",
-    "    line_width=1,\n",
-    "    marker_size=8,\n",
-    "    count_sort=True,\n",
-    "    color=\"taxon\",\n",
-    "    hover_name=\"sample_id\",\n",
-    "    leaf_data=ld3,\n",
-    "    render_mode=\"svg\",\n",
-    ")"
    ]
   },
   {
@@ -490,7 +374,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(\n",
+    "fig = anjl.plot(\n",
+    "    Z3d,\n",
+    "    line_width=1,\n",
+    "    marker_size=8,\n",
+    "    count_sort=True,\n",
+    "    color=\"taxon\",\n",
+    "    hover_name=\"sample_id\",\n",
+    "    leaf_data=ld3,\n",
+    "    render_mode=\"svg\",\n",
+    ")\n",
+    "fig.update_layout(title=\"Dynamic\")\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e0692c0-82d6-4502-849a-49070fd7bf5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = anjl.plot(\n",
     "    Z3h,\n",
     "    line_width=1,\n",
     "    marker_size=8,\n",
@@ -499,7 +404,9 @@
     "    hover_name=\"sample_id\",\n",
     "    leaf_data=ld3,\n",
     "    render_mode=\"svg\",\n",
-    ")"
+    ")\n",
+    "fig.update_layout(title=\"Heuristic\")\n",
+    "fig"
    ]
   },
   {
@@ -509,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anjl.plot(\n",
+    "fig = anjl.plot(\n",
     "    Z3r,\n",
     "    line_width=1,\n",
     "    marker_size=8,\n",
@@ -518,7 +425,30 @@
     "    hover_name=\"sample_id\",\n",
     "    leaf_data=ld3,\n",
     "    render_mode=\"svg\",\n",
-    ")"
+    ")\n",
+    "fig.update_layout(title=\"Rapid\")\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f1879b7-50b4-4e43-a169-762c62f8055a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = anjl.plot(\n",
+    "    Z3,\n",
+    "    line_width=1,\n",
+    "    marker_size=8,\n",
+    "    count_sort=True,\n",
+    "    color=\"taxon\",\n",
+    "    hover_name=\"sample_id\",\n",
+    "    leaf_data=ld3,\n",
+    "    render_mode=\"svg\",\n",
+    ")\n",
+    "fig.update_layout(title=\"Canonical\")\n",
+    "fig"
    ]
   },
   {
@@ -559,20 +489,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z4 = anjl.canonical_nj(D4)\n",
+    "Z4d = anjl.dynamic_nj(D4)\n",
     "Z4h = anjl.heuristic_nj(D4)\n",
-    "Z4r = anjl.rapid_nj(D4)"
+    "Z4r = anjl.rapid_nj(D4)\n",
+    "Z4 = anjl.canonical_nj(D4)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03cee5e1-7bee-4106-ba82-6895f3c0adb2",
+   "id": "dfcd2b9a-5836-413f-b666-e830a67190e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig = anjl.plot(\n",
-    "    Z4,\n",
+    "    Z4d,\n",
     "    line_width=0.5,\n",
     "    marker_size=5,\n",
     "    width=800,\n",
@@ -581,15 +512,16 @@
     "    color=\"taxon\",\n",
     "    hover_name=\"sample_id\",\n",
     "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
+    "    render_mode=\"svg\",\n",
     ")\n",
-    "fig.update_layout(title=\"Canonical\")\n",
+    "fig.update_layout(title=\"Dynamic\")\n",
     "fig"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfcd2b9a-5836-413f-b666-e830a67190e8",
+   "id": "8af00c6a-a572-4d0f-8fa4-ef2c15512302",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,6 +535,7 @@
     "    color=\"taxon\",\n",
     "    hover_name=\"sample_id\",\n",
     "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
+    "    render_mode=\"svg\",\n",
     ")\n",
     "fig.update_layout(title=\"Heuristic\")\n",
     "fig"
@@ -625,8 +558,32 @@
     "    color=\"taxon\",\n",
     "    hover_name=\"sample_id\",\n",
     "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
+    "    render_mode=\"svg\",\n",
     ")\n",
     "fig.update_layout(title=\"Rapid\")\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03cee5e1-7bee-4106-ba82-6895f3c0adb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = anjl.plot(\n",
+    "    Z4,\n",
+    "    line_width=0.5,\n",
+    "    marker_size=5,\n",
+    "    width=800,\n",
+    "    height=700,\n",
+    "    leaf_data=ld4,\n",
+    "    color=\"taxon\",\n",
+    "    hover_name=\"sample_id\",\n",
+    "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
+    "    render_mode=\"svg\",\n",
+    ")\n",
+    "fig.update_layout(title=\"Canonical\")\n",
     "fig"
    ]
   },
@@ -658,19 +615,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z5r = anjl.rapid_nj(D5)\n",
-    "Z5h = anjl.heuristic_nj(D5)"
+    "Z5d = anjl.dynamic_nj(D5)\n",
+    "Z5h = anjl.heuristic_nj(D5)\n",
+    "Z5r = anjl.rapid_nj(D5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04909da7-011d-40c7-9a1c-b0c0396574fe",
+   "id": "8a451cdb-b4bd-4bab-a8b1-8a2b6fd51c1d",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig = anjl.plot(\n",
-    "    Z5r,\n",
+    "    Z5d,\n",
     "    line_width=0.5,\n",
     "    marker_size=5,\n",
     "    width=800,\n",
@@ -682,7 +640,7 @@
     "    render_mode=\"svg\",\n",
     "    count_sort=True,\n",
     ")\n",
-    "fig.update_layout(title=\"Rapid\")\n",
+    "fig.update_layout(title=\"Dynamic\")\n",
     "fig"
    ]
   },
@@ -707,6 +665,30 @@
     "    count_sort=True,\n",
     ")\n",
     "fig.update_layout(title=\"Heuristic\")\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04909da7-011d-40c7-9a1c-b0c0396574fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = anjl.plot(\n",
+    "    Z5r,\n",
+    "    line_width=0.5,\n",
+    "    marker_size=5,\n",
+    "    width=800,\n",
+    "    height=700,\n",
+    "    leaf_data=ld5,\n",
+    "    color=\"country\",\n",
+    "    hover_name=\"sample_id\",\n",
+    "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
+    "    render_mode=\"svg\",\n",
+    "    count_sort=True,\n",
+    ")\n",
+    "fig.update_layout(title=\"Rapid\")\n",
     "fig"
    ]
   },
@@ -738,19 +720,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z6r = anjl.rapid_nj(D6)\n",
-    "Z6h = anjl.heuristic_nj(D6)"
+    "Z6d = anjl.dynamic_nj(D6)\n",
+    "Z6h = anjl.heuristic_nj(D6)\n",
+    "Z6r = anjl.rapid_nj(D6)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eff370a1-0409-4390-ba14-3fc505c4de41",
+   "id": "bc20d604-53b2-45db-a8e5-80f7f55fa42c",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig = anjl.plot(\n",
-    "    Z6r,\n",
+    "    Z6d,\n",
     "    line_width=0.5,\n",
     "    marker_size=5,\n",
     "    width=800,\n",
@@ -760,7 +743,7 @@
     "    hover_name=\"sample_id\",\n",
     "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
     ")\n",
-    "fig.update_layout(title=\"Rapid\")\n",
+    "fig.update_layout(title=\"Dynamic\")\n",
     "fig"
    ]
   },
@@ -783,6 +766,28 @@
     "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
     ")\n",
     "fig.update_layout(title=\"Heuristic\")\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eff370a1-0409-4390-ba14-3fc505c4de41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = anjl.plot(\n",
+    "    Z6r,\n",
+    "    line_width=0.5,\n",
+    "    marker_size=5,\n",
+    "    width=800,\n",
+    "    height=700,\n",
+    "    leaf_data=ld6,\n",
+    "    color=\"taxon\",\n",
+    "    hover_name=\"sample_id\",\n",
+    "    hover_data=[\"country\", \"location\", \"year\", \"month\"],\n",
+    ")\n",
+    "fig.update_layout(title=\"Rapid\")\n",
     "fig"
    ]
   }
