--- a/sandbox/bench.ipynb
+++ b/sandbox/bench.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "42ec4643-a6be-4b8d-8e4d-fb4d7c6140b9",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.3 ms ± 313 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "2.51 ms ± 163 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r1000 -n1\n",
+    "anjl.dynamic_nj(small_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "973991ea-6b24-426a-a32a-52954c7f994d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.06 ms ± 148 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -73,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.62 ms ± 659 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "4.31 ms ± 248 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -84,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "76f10e01-4497-43d4-a47f-2a01ec5c011a",
    "metadata": {},
    "outputs": [
@@ -92,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.96 ms ± 214 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "1.77 ms ± 169 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -111,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "befccb6f-dffa-49b7-97eb-1d5437568001",
    "metadata": {},
    "outputs": [
@@ -121,7 +140,7 @@
        "(472, 472)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "ebf1c642-1fa3-4047-a981-ddcd7afdf76c",
    "metadata": {},
    "outputs": [
@@ -142,7 +161,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.17 ms ± 976 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
+      "13.4 ms ± 913 μs per loop (mean ± std. dev. of 500 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r500 -n1\n",
+    "anjl.dynamic_nj(medium_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "be84bd37-84c4-449b-896d-f0d16da25608",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.62 ms ± 232 μs per loop (mean ± std. dev. of 1000 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -153,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "a7155702-0e81-4d54-a6b2-c68642e056f2",
    "metadata": {},
    "outputs": [
@@ -161,7 +199,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43.4 ms ± 2.84 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "33.2 ms ± 909 μs per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -172,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "316ec457-3799-4843-80df-491956229101",
    "metadata": {},
    "outputs": [
@@ -180,7 +218,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30.7 ms ± 2.44 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
+      "23.5 ms ± 1.07 ms per loop (mean ± std. dev. of 200 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -199,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "31ba8838-150b-42ee-84fd-7da492b8c36c",
    "metadata": {},
    "outputs": [
@@ -209,7 +247,7 @@
        "(3081, 3081)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "e825c570-c9b0-4405-b0b3-84680eaf5f2a",
    "metadata": {},
    "outputs": [
@@ -230,7 +268,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "182 ms ± 9.82 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+      "673 ms ± 18 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r20 -n1\n",
+    "anjl.dynamic_nj(large_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5c2edd15-2fe8-4b6f-a613-1bb17ec15cdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "209 ms ± 7.31 ms per loop (mean ± std. dev. of 20 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -241,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "edbc408e-f210-4bd4-8762-e249c66c1dd0",
    "metadata": {},
    "outputs": [
@@ -249,7 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.91 s ± 25.1 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "2.87 s ± 15.4 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -260,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "0bc124d6-dfcb-4513-ae57-471c2a063d62",
    "metadata": {},
    "outputs": [
@@ -268,7 +325,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.39 s ± 43.4 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
+      "6.39 s ± 160 ms per loop (mean ± std. dev. of 5 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -287,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "c219009d-5813-4f98-ad24-ed9b341c438d",
    "metadata": {},
    "outputs": [
@@ -297,7 +354,7 @@
        "(5868, 5868)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,14 +367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "50f32cfd-9755-40ba-ba55-7eef7242a6cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "449f9c1bf5a94444b66186906be1a606",
+       "model_id": "0e2e489616824ca7818dc2d1301e04b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,8 +389,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 853 ms, sys: 15 ms, total: 868 ms\n",
-      "Wall time: 868 ms\n"
+      "CPU times: user 4.08 s, sys: 22 ms, total: 4.1 s\n",
+      "Wall time: 4.08 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.dynamic_nj(xl_D, progress=tqdm);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ba812df6-9781-4686-9952-348242181170",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9035a799540844a8934abae851ea2f34",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5866 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 980 ms, sys: 19 ms, total: 999 ms\n",
+      "Wall time: 988 ms\n"
      ]
     }
    ],
@@ -351,7 +442,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ecb1db688424aa59c74b9f176b67c91",
+       "model_id": "62dba63f68064bd59eb4e60738779ea5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,8 +457,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19.8 s, sys: 245 ms, total: 20 s\n",
-      "Wall time: 19.9 s\n"
+      "CPU times: user 19.2 s, sys: 272 ms, total: 19.5 s\n",
+      "Wall time: 19.4 s\n"
      ]
     }
    ],
@@ -420,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "ccd20931-8281-49ff-b142-d0fae8d53f63",
    "metadata": {},
    "outputs": [
@@ -430,7 +521,7 @@
        "(8825, 8825)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,14 +534,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "4b302183-5d97-41c0-857f-59086e8b981f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6318bfb6751542b8ae2ec71eb8b176ef",
+       "model_id": "07ff1a0d620a4d1ea0d4e165b7d50f53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,8 +556,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.13 s, sys: 42 ms, total: 2.17 s\n",
-      "Wall time: 2.16 s\n"
+      "CPU times: user 13.6 s, sys: 50.1 ms, total: 13.6 s\n",
+      "Wall time: 13.6 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "anjl.dynamic_nj(xxl_D, progress=tqdm);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "cc45ce33-5c89-4718-acc9-334639a785b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "936feecb6a1b4f91ab151633f3f34d06",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8823 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.47 s, sys: 45 ms, total: 2.51 s\n",
+      "Wall time: 2.5 s\n"
      ]
     }
    ],
@@ -477,14 +602,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "94f6d2f5-e61e-45c8-934f-66289798bce9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b511b2b24874912877dbe41a315eaa8",
+       "model_id": "d745ce2da5624294866f22e80053d0ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -499,8 +624,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 6s, sys: 552 ms, total: 1min 6s\n",
-      "Wall time: 1min 6s\n"
+      "CPU times: user 1min 4s, sys: 545 ms, total: 1min 5s\n",
+      "Wall time: 1min 5s\n"
      ]
     }
    ],
@@ -511,10 +636,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "8949ce8a-7b75-470d-8ddf-501ab4cf462b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "45e7602335714d03a2029db835728fc9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8824 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2min 58s, sys: 241 ms, total: 2min 58s\n",
+      "Wall time: 2min 57s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "anjl.canonical_nj(xxl_D, progress=tqdm);"
